--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 .godot/
 /android/
 
-# Created by https://www.toptal.com/developers/gitignore/api/godot
-# Edit at https://www.toptal.com/developers/gitignore?templates=godot
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,godot
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,godot
 
 ### Godot ###
 # Godot 4+ specific ignores
@@ -22,4 +22,23 @@ export_presets.cfg
 data_*/
 mono_crash.*.json
 
-# End of https://www.toptal.com/developers/gitignore/api/godot
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
+.ionide
+
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,godot
