--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Unzip Godot
         run: unzip Godot.zip -d godot && mv godot/Godot_v4.4.1-stable_linux.x86_64 godot/godot
       - name: Compile for Windows
-        run: godot/godot --headless --path watts-up/project.godot --export-release win watts-up/build/win.exe
+        run: godot/godot --headless --path watts-up/ --export-release win watts-up/build/win.exe
       - name: Create Release
         uses: ncipollo/release-action@v1
         with:
