--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -12,6 +12,10 @@ jobs:
         run: curl -L -o "Godot.zip" https://github.com/godotengine/godot/releases/download/4.4.1-stable/Godot_v4.4.1-stable_linux.x86_64.zip --ssl-no-revoke
       - name: Unzip Godot
         run: unzip Godot.zip -d godot && mv godot/Godot_v4.4.1-stable_linux.x86_64 godot/godot
+      - name: Download Export Templates
+        run: curl -L -o "export.zip" https://github.com/godotengine/godot/releases/download/4.4.1-stable/Godot_v4.4.1-stable_export_templates.tpz --ssl-no-revoke
+      - name: Unzip Export Templates
+        run: unzip export.zip -d .
       - name: Compile for Windows
         run: godot/godot --headless --export-release win watts-up/build/win.exe
       - name: Create Release
