--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -3,7 +3,7 @@
 name="win"
 platform="Windows Desktop"
 runnable=true
-advanced_options=false
+advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="all_resources"
@@ -21,7 +21,7 @@ script_export_mode=2
 [preset.0.options]
 
 custom_template/debug=""
-custom_template/release=""
+custom_template/release="./templates/windows_release_x86_64.exe"
 debug/export_console_wrapper=0
 binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
