--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,4 +23,5 @@ jobs:
         uses: ncipollo/release-action@v1.18.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          tag: ${{ github.event.head_commit.message }}
           artifacts: "${{ steps.export.outputs.build_directory }}/*"
